@@ -1,0 +1,6 @@
+package TestApp::TraitFor::View::Magic;
+use Moose::Role;
+
+sub magic { 1 };
+
+1;
