@@ -1,0 +1,17 @@
+name TestApp_More
+
+<Model::Foo>
+ class TestApp::ModelBase::Foo
+ <args>
+  something a string
+ </args>
+ traits [ Magic ]
+</Model::Foo>
+
+<View::Bar>
+ class TestApp::ViewBase::Foo
+ <args>
+  something a view
+ </args>
+ traits [ Magic ]
+</View::Bar>
